--- a/app/src/main/res/layout/item_paso_details.xml
+++ b/app/src/main/res/layout/item_paso_details.xml
@@ -19,34 +19,57 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="16dp">
+            android:orientation="vertical">
 
-            <!-- Title, secondary and supporting text -->
-            <TextView
-                android:id="@+id/tvPasoNum"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/placeholderText_paso"
-                android:textAppearance="?attr/textAppearanceTitleLarge" />
+            <!-- Media -->
+            <com.google.android.material.card.MaterialCardView
+                style="?attr/materialCardViewFilledStyle"
+                android:layout_width="match_parent"
+                android:layout_height="140dp">
 
-            <TextView
-                android:id="@+id/tvTiempoPrepPaso"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:text="@string/placeholderText_tiempoEst"
-                android:textAppearance="?attr/textAppearanceTitleSmall" />
+                <ImageView
+                    android:id="@+id/ivPaso"
+                    android:layout_width="match_parent"
+                    android:layout_height="140dp"
+                    android:contentDescription="@string/content_description_receta"
+                    android:scaleType="centerCrop"
+                    app:srcCompat="@drawable/placeholder" />
 
-            <!-- Detalles del Paso -->
-            <TextView
-                android:id="@+id/tvDetallesPaso"
-                android:layout_width="wrap_content"
+            </com.google.android.material.card.MaterialCardView>
+
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                tools:text="@string/loremIpsum_small"
-                android:textAppearance="?attr/textAppearanceBodyMedium"
-                android:textColor="?android:attr/textColorSecondary" />
+                android:orientation="vertical"
+                android:padding="16dp">
+
+                <!-- Title, secondary and supporting text -->
+                <TextView
+                    android:id="@+id/tvPasoNum"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/placeholderText_paso"
+                    android:textAppearance="?attr/textAppearanceTitleLarge" />
+
+                <TextView
+                    android:id="@+id/tvTiempoPrepPaso"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:text="@string/placeholderText_tiempoEst"
+                    android:textAppearance="?attr/textAppearanceTitleSmall" />
+
+                <!-- Detalles del Paso -->
+                <TextView
+                    android:id="@+id/tvDetallesPaso"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    tools:text="@string/loremIpsum_small"
+                    android:textAppearance="?attr/textAppearanceBodyMedium"
+                    android:textColor="?android:attr/textColorSecondary" />
+
+            </LinearLayout>
 
         </LinearLayout>
 
