--- a/app/src/main/res/layout/fragment_edit_step_details.xml
+++ b/app/src/main/res/layout/fragment_edit_step_details.xml
@@ -49,12 +49,12 @@
 
                 <!--Image View para imagen de receta-->
                 <com.google.android.material.card.MaterialCardView
-                    android:id="@+id/ivFotoRecetaHolder"
+                    android:id="@+id/ivFotoPasoHolder"
                     android:layout_width="match_parent"
                     android:layout_height="140dp">
 
                     <ImageView
-                        android:id="@+id/ivFotoReceta"
+                        android:id="@+id/ivFotoPaso"
                         android:layout_width="match_parent"
                         android:layout_height="140dp"
                         android:scaleType="centerCrop"
@@ -84,7 +84,7 @@
                     android:hint="@string/detalles_paso_label">
 
                     <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/tfAutorReceta"
+                        android:id="@+id/tfDetallePaso"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:maxLines="10"
