--- a/app/src/main/res/layout/fragment_add_recipe_detail.xml
+++ b/app/src/main/res/layout/fragment_add_recipe_detail.xml
@@ -29,7 +29,7 @@
 
         </com.google.android.material.appbar.AppBarLayout>
 
-        <ScrollView
+        <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fillViewport="false">
@@ -152,7 +152,7 @@
 
             </LinearLayout>
 
-        </ScrollView>
+        </androidx.core.widget.NestedScrollView>
 
     </LinearLayout>
 
