--- a/app/src/main/res/layout/fragment_see_recipe.xml
+++ b/app/src/main/res/layout/fragment_see_recipe.xml
@@ -30,7 +30,7 @@
 
         </com.google.android.material.appbar.AppBarLayout>
 
-        <ScrollView
+        <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fillViewport="true">
@@ -233,7 +233,7 @@
 
             </LinearLayout>
 
-        </ScrollView>
+        </androidx.core.widget.NestedScrollView>
 
     </LinearLayout>
 
