--- a/app/src/main/res/layout/fragment_see_recipe.xml
+++ b/app/src/main/res/layout/fragment_see_recipe.xml
@@ -45,18 +45,60 @@
                 android:showDividers="middle"
                 app:layout_constraintVertical_bias="0">
 
-                <!--Image View para imagen de receta-->
+                <!-- CardView para la imagen de la receta, su tiempo de prep y calorias-->
                 <com.google.android.material.card.MaterialCardView
-                    android:id="@+id/cvFotoRecetaHolder"
                     android:layout_width="match_parent"
-                    android:layout_height="140dp">
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
 
-                    <ImageView
-                        android:id="@+id/ivFotoReceta"
+                    <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="140dp"
-                        android:scaleType="centerCrop"
-                        android:src="@drawable/placeholder" />
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <!--Image View para imagen de receta-->
+                        <com.google.android.material.card.MaterialCardView
+                            android:id="@+id/cvFotoRecetaHolder"
+                            style="?attr/materialCardViewFilledStyle"
+                            android:layout_width="match_parent"
+                            android:layout_height="140dp">
+
+                            <ImageView
+                                android:id="@+id/ivFotoReceta"
+                                android:layout_width="match_parent"
+                                android:layout_height="140dp"
+                                android:scaleType="centerCrop"
+                                android:src="@drawable/placeholder" />
+
+                        </com.google.android.material.card.MaterialCardView>
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical"
+                            android:padding="16dp">
+
+                            <!-- Title, secondary and supporting text -->
+                            <TextView
+                                android:id="@+id/tvTiempoPrepReceta"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/placeholderText_TiempoPrepReceta"
+                                android:textAppearance="?attr/textAppearanceBodyMedium"
+                                android:textColor="?android:attr/textColorSecondary" />
+
+                            <TextView
+                                android:id="@+id/tvCaloriesReceta"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="8dp"
+                                android:text="@string/placeholderText_kcalReceta"
+                                android:textAppearance="?attr/textAppearanceBodyMedium"
+                                android:textColor="?android:attr/textColorSecondary" />
+
+                        </LinearLayout>
+
+                    </LinearLayout>
 
                 </com.google.android.material.card.MaterialCardView>
 
@@ -80,7 +122,7 @@
                             android:textAppearance="?attr/textAppearanceTitleLarge" />
 
                         <TextView
-                            android:id="@+id/tvTiempoPrepReceta"
+                            android:id="@+id/tvTiempoPrepPreparacion"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="8dp"
@@ -220,8 +262,8 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="end"
                     android:layout_marginBottom="12dp"
+                    android:gravity="end"
                     android:visibility="invisible">
 
                     <Button
