--- a/app/src/main/res/menu/top_app_bar_save.xml
+++ b/app/src/main/res/menu/top_app_bar_save.xml
@@ -3,7 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/guardar"
+        android:enabled="true"
         android:title="@string/save"
+        android:icon="@drawable/ic_outline_save_24"
         android:contentDescription="@string/save"
         app:showAsAction="ifRoom" />
 </menu>
