--- a/app/src/main/res/layout/item_ingrediente_details.xml
+++ b/app/src/main/res/layout/item_ingrediente_details.xml
@@ -14,6 +14,7 @@
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
@@ -52,12 +53,6 @@
                     tools:text="@string/placeholder_cant_cals"
                     android:textAppearance="?attr/textAppearanceBodyMedium"
                     android:textColor="?android:attr/textColorSecondary" />
-
-                <!--Divider-->
-                <com.google.android.material.divider.MaterialDivider
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:visibility="invisible"/>
 
             </LinearLayout>
 
