--- a/app/src/main/res/layout/fragment_see_recipe.xml
+++ b/app/src/main/res/layout/fragment_see_recipe.xml
@@ -136,9 +136,8 @@
                             android:text="@string/ingridient_label"
                             android:textAppearance="?attr/textAppearanceTitleSmall" />
 
-                        <!-- Lista de Ingredientes (Max 10) -->
                         <TextView
-                            android:id="@+id/tvIngrediente1"
+                            android:id="@+id/tvIngrediente"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="8dp"
@@ -147,106 +146,6 @@
                             android:textColor="?android:attr/textColorSecondary"
                             android:visibility="gone"
                             tools:visibility="" />
-
-                        <TextView
-                            android:id="@+id/tvIngrediente2"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="2dp"
-                            android:text="@string/placeholderText_ingrediente"
-                            android:textAppearance="?attr/textAppearanceBodyMedium"
-                            android:textColor="?android:attr/textColorSecondary"
-                            android:visibility="gone"
-                            tools:visibility="" />
-
-                        <TextView
-                            android:id="@+id/tvIngrediente3"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="2dp"
-                            android:text="@string/placeholderText_ingrediente"
-                            android:textAppearance="?attr/textAppearanceBodyMedium"
-                            android:textColor="?android:attr/textColorSecondary"
-                            android:visibility="gone"
-                            tools:visibility="" />
-
-                        <TextView
-                            android:id="@+id/tvIngrediente4"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="2dp"
-                            android:text="@string/placeholderText_ingrediente"
-                            android:textAppearance="?attr/textAppearanceBodyMedium"
-                            android:textColor="?android:attr/textColorSecondary"
-                            android:visibility="gone"
-                            tools:visibility="" />
-
-                        <TextView
-                            android:id="@+id/tvIngrediente5"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="2dp"
-                            android:text="@string/placeholderText_ingrediente"
-                            android:textAppearance="?attr/textAppearanceBodyMedium"
-                            android:textColor="?android:attr/textColorSecondary"
-                            android:visibility="gone"
-                            tools:visibility="" />
-
-                        <TextView
-                            android:id="@+id/tvIngrediente6"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="2dp"
-                            android:text="@string/placeholderText_ingrediente"
-                            android:textAppearance="?attr/textAppearanceBodyMedium"
-                            android:textColor="?android:attr/textColorSecondary"
-                            android:visibility="gone"
-                            tools:visibility="" />
-
-                        <TextView
-                            android:id="@+id/tvIngrediente7"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="2dp"
-                            android:text="@string/placeholderText_ingrediente"
-                            android:textAppearance="?attr/textAppearanceBodyMedium"
-                            android:textColor="?android:attr/textColorSecondary"
-                            android:visibility="gone"
-                            tools:visibility="" />
-
-                        <TextView
-                            android:id="@+id/tvIngrediente8"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="2dp"
-                            android:text="@string/placeholderText_ingrediente"
-                            android:textAppearance="?attr/textAppearanceBodyMedium"
-                            android:textColor="?android:attr/textColorSecondary"
-                            android:visibility="gone"
-                            tools:visibility="" />
-
-                        <TextView
-                            android:id="@+id/tvIngrediente9"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="2dp"
-                            android:text="@string/placeholderText_ingrediente"
-                            android:textAppearance="?attr/textAppearanceBodyMedium"
-                            android:textColor="?android:attr/textColorSecondary"
-                            android:visibility="gone"
-                            tools:visibility="" />
-
-                        <TextView
-                            android:id="@+id/tvIngrediente10"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="2dp"
-                            android:text="@string/placeholderText_ingrediente"
-                            android:textAppearance="?attr/textAppearanceBodyMedium"
-                            android:textColor="?android:attr/textColorSecondary"
-                            android:visibility="gone"
-                            tools:visibility="" />
-
                     </LinearLayout>
 
                 </com.google.android.material.card.MaterialCardView>
