--- a/app/src/main/res/layout/item_recipe_overview.xml
+++ b/app/src/main/res/layout/item_recipe_overview.xml
@@ -23,6 +23,21 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
+            <!-- Width Forcer -->
+            <com.google.android.material.card.MaterialCardView
+                style="?attr/materialCardViewFilledStyle"
+                android:layout_width="match_parent"
+                android:layout_height="0dp">
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="140dp"
+                    android:scaleType="centerCrop"
+                    app:srcCompat="@drawable/placeholder"
+                    android:contentDescription="Take full width forcer" />
+
+            </com.google.android.material.card.MaterialCardView>
+
             <!-- Media -->
             <com.google.android.material.card.MaterialCardView
                 style="?attr/materialCardViewFilledStyle"
